# rust_distributed_task_scheduler

./: Cargo.toml  build.rs  docker-compose.yml
proto/: coordinator.proto
src/: coordinator.rs  main.rs  scheduler.rs  worker.rs
