[package]
name = "rust_distributed_task_scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "macros" ] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
actix-web = "4.0"
tonic = "0.11"
prost = "0.12"
tonic-reflection = "0.11"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "coordinator"
path = "src/coordinator.rs"